--- a/normalize.css
+++ b/normalize.css
@@ -39,7 +39,7 @@
   
   h1 {
     font-size: 2em;
-    margin: 0.67em 0;
+    margin: 0;
   }
   
   /* Grouping content
@@ -350,5 +350,6 @@
 
   ul {
       padding: 0;
+      margin: 0;
   }
   
