--- a/style.scss
+++ b/style.scss
@@ -99,7 +99,7 @@
     display: flex;
     width: 100%;
     .banner__social {
-        width: 90px;
+        width: 82px;
         background-color: #131313;
         .social-link {            
             display: block;
@@ -120,6 +120,7 @@
         padding-top: 194px;
         background-image: url("assets/img/banner-repair.png");
         background-repeat: no-repeat;
+        background-size: cover;
 
         .banner-title {
             display: block;
@@ -175,7 +176,7 @@
             position: relative;
             display: block;
             bottom: -141px;
-            left: -141px;
+            left: -134px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -183,8 +184,7 @@
             height: 97px;
             background-color: #131313;
 
-            .scroll-txt {
-               
+            .scroll-txt {               
                 min-height: 29px;
                 min-width: 150px;                
                 font-family: "Yeseva One";
@@ -203,8 +203,339 @@
 }
 
 .projects {
-    height: 1074px;
+    display: flex;
+    align-items: flex-end;
+    height: 695px;
+    padding:  0 0 379px 100px;
     background-image: url("assets/img/project-bg.png");
-    background-repeat: no-repeat;    
-    background-position: 0 -2px;
+    background-repeat: no-repeat;       
+    background-size: cover;
+    overflow: hidden;
+
+    .projects__completed-projects {
+        max-height: 482px;
+        width: 660px;
+        display: flex;
+        flex-direction: column;
+        // align-items: flex-end;
+        
+        //justify-content: space-between;
+        
+        // удалить
+        // margin-left: 100px;
+        // margin-top: 100px;
+        //
+        .projects-header {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 170px;
+            max-width: 420px;           
+            
+            .header-span {
+                display: block;
+            }
+
+            .project-title {
+                width: 171px;
+                font-family: "Yeseva One";
+                font-style: normal;
+                font-weight: normal;
+                font-size: 27px;
+                line-height: 37px;
+                letter-spacing: -0.07em;
+                text-transform: uppercase;
+                color: #E3B873;
+            }
+
+            .project-text {
+                font-family: "FuturaBookC";
+                font-size: 18px;
+                line-height: 29px;
+                color: #FFFFFF;
+            }
+        }
+        .projects-desc {
+            display: grid;
+            grid-template-rows: 1fr 1fr;
+            grid-template-columns: 1fr 1fr;
+            row-gap: 30px;
+            margin-top: 50px;
+            //flex-wrap: wrap;
+
+            // &:nth-child(2n){
+            //     width: 213px;
+            // }
+            // &:nth-child(2n+1){
+            //     width: 156px;
+            // }
+
+            .desc-span {
+                display: block;
+                overflow: hidden;
+                font-family: "Yeseva One";
+                font-style: normal;
+                font-weight: normal;
+                font-size: 18px;
+                line-height: 25px;
+                text-transform: uppercase;
+                color: #E3B873;
+
+                &-text {
+                    display: block;
+                    max-width: 120px;
+                    overflow: hidden;
+                    font-family: "FuturaBookC";
+                    font-size: 15px;
+                    line-height: 20px;
+                    color: #FFFFFF;
+                    text-transform: none;
+                }
+            
+            }
+
+        }
+        
+        .projects-switcher {
+            display: flex;
+            margin-top: 90px;
+
+            .switcher {
+                display: block;
+            }
+
+            .switcher-left,
+            .switcher-right  {
+                width: 42px;
+                height: 13px;
+            }
+            
+            .switcher-left {
+                margin-right: 20px;
+                background-image: url("assets/img/switcher-left.png");
+            }
+
+            .switcher-right {
+                margin-left: 20px;
+                background-image: url("assets/img/switcher-rigth.png");
+            }
+            
+            .switcher-marker {
+                width: 9px;
+                height: 9px;
+                margin: 0 9px;
+                background: rgba(255, 255, 255, 0.3);
+                border-radius: 30px;
+
+                &--colored {
+                    background: #FFFFFF;
+                }
+            }
+
+        }
+
+    }
+
+    .projects__slider {
+        max-height: 551px;
+        width: 100%;
+        margin-left: 70px;
+        .slider-map {
+            display: flex;
+            justify-content: space-between;
+            width: 623px;
+            margin-bottom: 45px;
+
+           .map-name {
+            display: block;
+            font-family: "Yeseva One";
+            font-style: normal;
+            font-weight: normal;
+            font-size: 14px;
+            line-height: 19px;
+            text-transform: uppercase;            
+            color: rgba(255, 255, 255, 0.3);
+            text-decoration: none;
+                &--colored {
+                    color: #E3B873;
+                    text-decoration-line: underline;
+                }
+
+           } 
+        }
+        .slider-frames {
+            position: relative;
+            display: flex;
+            height: 482px;
+            width: 100%;
+            padding-right: 21px;
+            //overflow: hidden;
+
+            .frame-content {                
+                width: 679px;
+                height: 482px;
+                // background-repeat: no-repeat;
+
+                // &:nth-child(1) {
+                //     background-image: url("assets/img/slide-1.png");
+                    
+                // }
+                    &:nth-child(2) {
+                        position: absolute;
+                        right: -59%;
+                    }
+            }
+
+            &:after {
+                content: "";
+                position: absolute;
+                top: calc(50% - 23px);
+                right: 5%;
+                width: 55px;
+                height: 55px;
+                background-color: #E3B873;
+                box-shadow: 0px 0px 15px rgba(227, 184, 115, 0.5);
+                border-radius: 50%;                
+                background-image: url("assets/img/next-slide.png");
+                background-repeat: no-repeat;
+                background-position: 50% 50%;
+            }
+        }
+    }
+}
+
+.repair {
+    height: 1440px;
+    position: relative;
+    background-image: url("assets/img/lines-bg.png");
+    background-repeat: no-repeat;
+
+    .repair__online-control {
+        position: relative;
+        top: -285px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        max-width: 818px;
+        margin: 0 auto;
+
+        .online-sign {
+            display: block;
+            width: 196px;
+            height: 67px;            
+            font-family: "Yeseva One";
+            font-style: normal;
+            font-weight: normal;
+            font-size: 20px;
+            line-height: 28px;
+            text-align: center;
+            background-image: url("assets/img/online-control.png");
+            background-repeat: no-repeat;
+            background-position: calc(100% - 57px) 100%;
+            text-transform: uppercase;
+            color: #FFFFFF;
+           
+        }
+
+        .online-video {
+            margin: 31px 0 99px 0;
+        }
+
+        .online-paragraph {
+            display: block;   
+            max-width: 681px;         
+            font-family: "FuturaBookC";
+            font-size: 20px;
+            line-height: 34px;
+            text-align: center;
+            color: #363636;
+
+        }        
+
+       .online-form {
+           max-width: 769px;
+           display: flex;
+           flex-wrap: wrap;
+           justify-content: space-between;
+           margin-top: 92px;
+        
+        .form-label,
+        .form-input {
+            display: block;
+        }
+
+        .label-name,
+        .input-name,
+        .input-phone {
+            
+            width: 231px;
+        }
+        
+        .input-name,
+        .input-phone {
+            height: 26px;
+            background-color: transparent;
+            border: 0;
+            border-bottom: 1px solid rgba(54, 54, 54, 0.3);
+
+            &::placeholder {
+                vertical-align: top;
+                font-family: "FuturaBookC";
+                font-size: 18px;
+                line-height: 36px;
+                color: #363636;
+            }
+            
+        }
+        
+        .label-name{
+           
+            font-family: "FuturaBookC";
+            font-size: 15px;
+            line-height: 20px;
+            color: rgba(54, 54, 54, 0.5);
+        }
+
+        .input-submit {
+            display: block;
+            width: 200px;
+            height: 51px;
+            background: #E3B873;
+            box-shadow: 0px 15px 15px rgba(227, 184, 115, 0.15);
+            border: 0;
+            border-radius: 2px;
+            font-family:"FuturaDemiC";
+            font-size: 15px;
+            line-height: 26px;            
+            text-align: center;
+            text-transform: uppercase;
+            color: #FFFFFF;
+
+        }
+        
+        .checkbox-text {
+            display: block;
+            justify-self: center;
+            margin: 35px auto;
+            width: 286px;
+            font-family: "FuturaBookC";
+            font-size: 16px;
+            line-height: 22px;
+            color: #181818;
+
+            .checkbox-marker {
+                display: inline-block;
+                margin-right: 9px;
+            }
+
+        }
+
+
+       
+
+
+       } 
+    }
+
+
 }
