--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,21 @@
+@mixin title-with-icon {
+            display: block;
+            width: 300px;
+            height: 67px;            
+            font-family: "Yeseva One";
+            font-style: normal;
+            font-weight: normal;
+            font-size: 20px;
+            line-height: 28px;
+            text-align: center;
+            background-repeat: no-repeat;
+            //background-position: calc(50% - 57px) 100%;
+            background-position: 50% 100%;
+            text-transform: uppercase;
+           
+}
+
+
 @media (max-width: 1440px) {
     .wrapper {
       width: 1440px;
@@ -420,19 +438,8 @@
         margin: 0 auto;
 
         .online-sign {
-            display: block;
-            width: 196px;
-            height: 67px;            
-            font-family: "Yeseva One";
-            font-style: normal;
-            font-weight: normal;
-            font-size: 20px;
-            line-height: 28px;
-            text-align: center;
-            background-image: url("assets/img/online-control.png");
-            background-repeat: no-repeat;
-            background-position: calc(100% - 57px) 100%;
-            text-transform: uppercase;
+            @include title-with-icon;            
+            background-image: url("assets/img/online-control.png");            
             color: #FFFFFF;
            
         }
@@ -528,14 +535,93 @@
                 margin-right: 9px;
             }
 
-        }
-
-
-       
-
+        } 
 
        } 
     }
 
+    .repair__types {
+       position: relative;
+       bottom: 180px;
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+        .repair-sign {
+           @include title-with-icon;
+            background-image: url("assets/img/types-repair.png");           
+            color: #181818;
+        }
+        
+    }
+    .repair-examples{
+        display: flex;
+        flex-wrap: wrap; 
+        margin-top: 31px;      
+        
+        .repair-examples__item {
+            position: relative;
+            z-index: 0;
+            margin-right: 30px;
 
+            .item-list {
+                position: relative;
+                z-index: 1;
+                bottom: 150px;
+                left: 31px;
+                width: 330px;
+                height: 286px;
+                //margin: 0 auto;
+                box-sizing: border-box;
+                padding: 25px 0 0 34px;
+                background: #FFFFFF;
+                box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
+
+                .list-title {
+                    display: block;
+                    // margin: 25px 0 0 34px;
+                    font-family: "Yeseva One";
+                    font-style: normal;
+                    font-weight: normal;
+                    font-size: 18px;
+                    line-height: 25px;
+                    color: #363636;
+                }
+
+                .list-points {
+                    display: block; 
+                    margin-left: 15px;
+                   
+                                      
+                }
+
+                .points {                    
+                    font-family: "FuturaBookC";
+                    font-size: 15px;
+                    line-height: 25px;
+                    color: #959595;
+                }        
+
+            }
+            .item-price {
+                position: relative;
+                z-index: 2;
+                bottom: 177px;
+                left: 31px;
+                display: block;
+                width: 228px;
+                height: 54px;
+                font-family: "Yeseva One";
+                font-style: normal;
+                font-weight: normal;
+                font-size: 18px;
+                line-height: 54px;
+                text-align: center;
+                background: #E3B873;
+                box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.3);
+                text-transform: uppercase;
+                color: #FFFFFF;
+            }
+
+        }
+    }
 }
