--- a/style.scss
+++ b/style.scss
@@ -624,4 +624,199 @@
 
         }
     }
-}
+    .repair__promotion {
+        display: flex;
+        position: relative;
+        bottom: 115px;
+        justify-content: space-between;
+
+        .promotion-elipse {
+            position: relative;
+            height: 636px;
+            min-width: 776px;
+            background-image: url("assets/img/elipse-building.png");
+            background-repeat: no-repeat;
+
+            .promotion-point {
+                position: relative;
+                display: flex;
+                align-content: center;
+                //justify-content: center;
+                align-items: center;
+                justify-items: center;
+                //width: 225px;  
+                .promotion-num {
+                   
+                    display: block;
+                    width: 42px;
+                    height: 42px;
+                    margin-right: 13px;
+                    background: #E3B873;
+                    box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.15);
+                    border-radius: 30px;
+                    font-family: "Yeseva One";
+                    font-style: normal;
+                    font-weight: normal;
+                    font-size: 18px;
+                    line-height: 42px;
+                    text-align: center;
+                    color: #FFFFFF;               
+                }
+    
+                .promotion-num-text {
+                    display: block;                   
+                    width: 225px;                    
+                    font-family: "FuturaMediumC";
+                    font-size: 18px;                  
+                    word-wrap: break-word;
+                    color: #363636;
+                }
+
+                &:nth-of-type(1){
+                    top: 120px;
+                    left: 355px;
+
+                    .promotion-num-text{                        
+                        width: 422px;
+                    }
+                }
+                &:nth-of-type(2){
+                    top: 186px;
+                    left: 432px;                   
+                }
+                &:nth-of-type(3){
+                    top: 306px;
+                    left: 455px;                   
+                }
+                &:nth-of-type(4){
+                    top: 425px;
+                    left: 386px;                   
+                }
+            }
+          
+        }
+        .promotion-from {
+            
+            
+            .submit-form {
+                display: flex;
+                flex-direction: column;               
+                padding: 28px 49px;
+                width: 509px;
+                height: 506px;
+                background: #131313;
+                box-shadow: 0px 30px 30px rgba(0, 0, 0, 0.05);              
+                box-sizing: border-box;
+
+            }
+
+            .submit-span {
+                display: block;
+                align-self: center;
+                margin-bottom: 39px;
+                width: 290px;
+                font-family: "FuturaDemiC";
+                font-size: 20px;
+                line-height: 25px;
+                text-align: center;
+                word-wrap: break-word;
+
+                color: #FFFFFF;
+            }
+            .form-label,
+            .form-input {
+                display: block;
+            }
+    
+            .form-label,
+            .form-input {
+                
+                width: 408px;
+            }
+            
+            .form-input {
+                height: 26px;
+                background-color: transparent;
+                border: 0;
+                border-bottom: 1px solid rgba(54, 54, 54, 0.3);
+    
+                &::placeholder {
+                    vertical-align: top;
+                    font-family: "FuturaMediumC";
+                    font-size: 18px;
+                    line-height: 25px;                    
+                    color: #FFFFFF;
+                }
+                
+            }
+            .checkbox-from {
+                display: inline-flex;
+                height: 18px;
+                width: 18px;
+                margin-right: 9px;
+            }
+            
+            .form-label {
+               
+                font-family: "FuturaBookC";
+                font-size: 15px;
+                line-height: 20px;                
+                color: rgba(255, 255, 255, 0.5);
+            }
+            .form-label:nth-of-type(2) {
+                margin: 48px 0;
+            }
+           
+    
+            .input-submit {
+                display: block;
+                align-self: flex-end;
+                width: 213px;
+                height: 51px;
+                background: #E3B873;
+                box-shadow: 0px 15px 15px rgba(227, 184, 115, 0.15);
+                border: 0;
+                border-radius: 2px;
+                font-family:"FuturaDemiC";
+                font-size: 13px;
+                line-height: 18px;            
+                text-align: center;
+                text-transform: uppercase;
+                color: #FFFFFF;
+    
+            }
+            .checkbox-text {
+                display: inline-flex;
+                height: 18px;
+                width: 286px;
+                margin: 18px 0 39px 0;
+                font-family: "FuturaBookC";
+                font-size: 16px;
+                line-height: 22px;
+                color: #FFFFFF;               
+    
+            } 
+
+        }
+
+
+    }
+    .promotion-discount {
+        display: block;
+        height: 72px;
+        width: 370px;
+        margin-top: 38px;
+        padding: 10px 0 0 115px;
+        box-sizing: border-box;       
+        background-position-y: -10px;
+        word-wrap: break-word;
+        font-family: "FuturaDemiC";
+        font-size: 20px;
+        line-height: 25px;
+        background-image: url("assets/img/pigbox.png");
+        background-repeat: no-repeat;
+        color: #E3B873;
+        text-shadow: 0px 3px 10px rgba(227, 184, 115, 0.15);
+
+    }
+}   
